--- a/Templates/Field.Mustache
+++ b/Templates/Field.Mustache
@@ -1,1 +1,6 @@
-﻿{{ Name }}: {{ Type }}  {{ #Comment }}# {{ Comment }}{{ /Comment }}
+﻿{{ #Comment }}
+/**
+ * {{ Comment }}
+ */
+{{ /Comment }}
+{{ Name }}: {{ Type }};
