--- a/Templates/Method.Mustache
+++ b/Templates/Method.Mustache
@@ -1,4 +1,4 @@
-﻿{{ #IsAsync }}async {{/IsAsync}}def {{Name}}({{ ArgumentsString }}) -> {{ ReturnType }}:
+﻿{{ #IsAsync }}async {{/IsAsync}}{{Name}}({{ ArgumentsString }}): {{ ReturnType }}:
     {{ #CommentString }}
     """
     {{ CommentsString }}
